--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3212,6 +3212,25 @@
   file = {/Users/nidhivinod/Zotero/storage/M576HJAZ/Fisher et al. - 2020 - ECOSTRESS NASA's Next Generation Mission to Measu.pdf;/Users/nidhivinod/Zotero/storage/E9HBB969/2019WR026058.html}
 }
 
+@article{fisherPerspectivesFutureLand2020,
+  title = {Perspectives on the {{Future}} of {{Land Surface Models}} and the {{Challenges}} of {{Representing Complex Terrestrial Systems}}},
+  author = {Fisher, Rosie A. and Koven, Charles D.},
+  date = {2020},
+  journaltitle = {Journal of Advances in Modeling Earth Systems},
+  volume = {12},
+  number = {4},
+  pages = {e2018MS001453},
+  issn = {1942-2466},
+  doi = {10.1029/2018MS001453},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/2018MS001453},
+  urldate = {2022-01-22},
+  abstract = {Land surface models (LSMs) are a vital tool for understanding, projecting, and predicting the dynamics of the land surface and its role within the Earth system, under global change. Driven by the need to address a set of key questions, LSMs have grown in complexity from simplified representations of land surface biophysics to encompass a broad set of interrelated processes spanning the disciplines of biophysics, biogeochemistry, hydrology, ecosystem ecology, community ecology, human management, and societal impacts. This vast scope and complexity, while warranted by the problems LSMs are designed to solve, has led to enormous challenges in understanding and attributing differences between LSM predictions. Meanwhile, the wide range of spatial scales that govern land surface heterogeneity, and the broad spectrum of timescales in land surface dynamics, create challenges in tractably representing processes in LSMs. We identify three “grand challenges” in the development and use of LSMs, based around these issues: managing process complexity, representing land surface heterogeneity, and understanding parametric dynamics across the broad set of problems asked of LSMs in a changing world. In this review, we discuss progress that has been made, as well as promising directions forward, for each of these challenges.},
+  langid = {english},
+  keywords = {complexity,heterogeneity,land surface models,parametric dynamics,terrestrial biosphere,tiling scheme},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/2018MS001453},
+  file = {/Users/nidhivinod/Zotero/storage/NSF2H48H/Fisher and Koven - 2020 - Perspectives on the Future of Land Surface Models .pdf}
+}
+
 @article{fisherVegetationDemographicsEarth2018,
   title = {Vegetation Demographics in {{Earth System Models}}: {{A}} Review of Progress and Priorities},
   shorttitle = {Vegetation Demographics in {{Earth System Models}}},
@@ -3230,6 +3249,26 @@
   keywords = {carbon cycle,demographics,dynamic global vegetation models,Earth System Model,ecosystem,vegetation},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.13910},
   file = {/Users/nidhivinod/Zotero/storage/KL4H6VN4/Fisher et al. - 2018 - Vegetation demographics in Earth System Models A .pdf;/Users/nidhivinod/Zotero/storage/VVIJYWKU/gcb.html}
+}
+
+@article{fisherVegetationDemographicsEarth2018a,
+  title = {Vegetation Demographics in {{Earth System Models}}: {{A}} Review of Progress and Priorities},
+  shorttitle = {Vegetation Demographics in {{Earth System Models}}},
+  author = {Fisher, Rosie A. and Koven, Charles D. and Anderegg, William R. L. and Christoffersen, Bradley O. and Dietze, Michael C. and Farrior, Caroline E. and Holm, Jennifer A. and Hurtt, George C. and Knox, Ryan G. and Lawrence, Peter J. and Lichstein, Jeremy W. and Longo, Marcos and Matheny, Ashley M. and Medvigy, David and Muller-Landau, Helene C. and Powell, Thomas L. and Serbin, Shawn P. and Sato, Hisashi and Shuman, Jacquelyn K. and Smith, Benjamin and Trugman, Anna T. and Viskari, Toni and Verbeeck, Hans and Weng, Ensheng and Xu, Chonggang and Xu, Xiangtao and Zhang, Tao and Moorcroft, Paul R.},
+  date = {2018},
+  journaltitle = {Global Change Biology},
+  volume = {24},
+  number = {1},
+  pages = {35--54},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.13910},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.13910},
+  urldate = {2022-01-22},
+  abstract = {Numerous current efforts seek to improve the representation of ecosystem ecology and vegetation demographic processes within Earth System Models (ESMs). These developments are widely viewed as an important step in developing greater realism in predictions of future ecosystem states and fluxes. Increased realism, however, leads to increased model complexity, with new features raising a suite of ecological questions that require empirical constraints. Here, we review the developments that permit the representation of plant demographics in ESMs, and identify issues raised by these developments that highlight important gaps in ecological understanding. These issues inevitably translate into uncertainty in model projections but also allow models to be applied to new processes and questions concerning the dynamics of real-world ecosystems. We argue that stronger and more innovative connections to data, across the range of scales considered, are required to address these gaps in understanding. The development of first-generation land surface models as a unifying framework for ecophysiological understanding stimulated much research into plant physiological traits and gas exchange. Constraining predictions at ecologically relevant spatial and temporal scales will require a similar investment of effort and intensified inter-disciplinary communication.},
+  langid = {english},
+  keywords = {carbon cycle,demographics,dynamic global vegetation models,Earth System Model,ecosystem,vegetation},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.13910},
+  file = {/Users/nidhivinod/Zotero/storage/B4GAA63V/Fisher et al. - 2018 - Vegetation demographics in Earth System Models A .pdf}
 }
 
 @article{fleckThreedimensionalLaminaArchitecture2003,
@@ -3364,6 +3403,12 @@
   isbn = {978-0-323-14528-2},
   langid = {english},
   annotation = {OCLC: 1162299449}
+}
+
+@online{FunctionalTraitsSHIFT,
+  title = {Functional\_traits - {{SHIFT}} - {{Google Drive}}},
+  url = {https://drive.google.com/drive/folders/1f3aLAIAcKDJcAcbWc5tUf6gJo7MIVAcK},
+  urldate = {2022-01-20}
 }
 
 @article{g.s.p.h.TropicalRainForest1953,
@@ -5610,6 +5655,25 @@
   keywords = {climate,DVGM,vegetation},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/2003GB002199},
   file = {/Users/nidhivinod/Zotero/storage/TSRA5ZLH/Krinner et al. - 2005 - A dynamic global vegetation model for studies of t.pdf;/Users/nidhivinod/Zotero/storage/W7KE3BJ5/2003GB002199.html}
+}
+
+@article{krinnerDynamicGlobalVegetation2005a,
+  title = {A Dynamic Global Vegetation Model for Studies of the Coupled Atmosphere-Biosphere System},
+  author = {Krinner, G. and Viovy, Nicolas and de Noblet-Ducoudré, Nathalie and Ogée, Jérôme and Polcher, Jan and Friedlingstein, Pierre and Ciais, Philippe and Sitch, Stephen and Prentice, I. Colin},
+  options = {useprefix=true},
+  date = {2005},
+  journaltitle = {Global Biogeochemical Cycles},
+  volume = {19},
+  number = {1},
+  issn = {1944-9224},
+  doi = {10.1029/2003GB002199},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/2003GB002199},
+  urldate = {2022-01-22},
+  abstract = {This work presents a new dynamic global vegetation model designed as an extension of an existing surface-vegetation-atmosphere transfer scheme which is included in a coupled ocean-atmosphere general circulation model. The new dynamic global vegetation model simulates the principal processes of the continental biosphere influencing the global carbon cycle (photosynthesis, autotrophic and heterotrophic respiration of plants and in soils, fire, etc.) as well as latent, sensible, and kinetic energy exchanges at the surface of soils and plants. As a dynamic vegetation model, it explicitly represents competitive processes such as light competition, sapling establishment, etc. It can thus be used in simulations for the study of feedbacks between transient climate and vegetation cover changes, but it can also be used with a prescribed vegetation distribution. The whole seasonal phenological cycle is prognostically calculated without any prescribed dates or use of satellite data. The model is coupled to the IPSL-CM4 coupled atmosphere-ocean-vegetation model. Carbon and surface energy fluxes from the coupled hydrology-vegetation model compare well with observations at FluxNet sites. Simulated vegetation distribution and leaf density in a global simulation are evaluated against observations, and carbon stocks and fluxes are compared to available estimates, with satisfying results.},
+  langid = {english},
+  keywords = {climate,DVGM,vegetation},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/2003GB002199},
+  file = {/Users/nidhivinod/Zotero/storage/998EWSMB/Krinner et al. - 2005 - A dynamic global vegetation model for studies of t.pdf}
 }
 
 @article{kullDistributionLeafPhotosynthetic1998,
@@ -10358,6 +10422,23 @@
   file = {/Users/nidhivinod/Zotero/storage/DVMP763M/830355.pdf}
 }
 
+@article{sellersCanopyReflectancePhotosynthesis1985,
+  title = {Canopy Reflectance, Photosynthesis and Transpiration},
+  author = {Sellers, P. J.},
+  date = {1985-08},
+  journaltitle = {International Journal of Remote Sensing},
+  volume = {6},
+  number = {8},
+  pages = {1335--1372},
+  issn = {0143-1161, 1366-5901},
+  doi = {10.1080/01431168508948283},
+  url = {https://www.tandfonline.com/doi/full/10.1080/01431168508948283},
+  urldate = {2022-01-22},
+  abstract = {A two-stream approximation model of radiative transfer is used 10 calculate values of hemispheric canopy reflectance in the visible and near-infrared wavelength intervals. Simpleleaf modelsof photosynthesis and stomatal resistance' are integrated over leaforientation and canopy depth to obtain estimatesof canopy photosynthesis and bulk stomatal or canopy resistance. The ratio of near-infrared and visiblereflectances ispredicted to bea near linear indicator of minimumcanopy resistance and photosynthetic capacity but a poor predictor of leaf area index or biomass.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/M8PTW8N4/Sellers - 1985 - Canopy reflectance, photosynthesis and transpirati.pdf}
+}
+
 @article{sellinHumiditydrivenChangesGrowth2013,
   title = {Humidity-Driven Changes in Growth Rate, Photosynthetic Capacity, Hydraulic Properties and Other Functional Traits in Silver Birch ({{Betula}} Pendula)},
   author = {Sellin, Arne and Tullus, Arvo and Niglas, Aigar and Õunapuu, Eele and Karusion, Annika and Lõhmus, Krista},
@@ -12189,6 +12270,12 @@
   keywords = {Africa,leaf energy balance,maximum rate of electron transport (Jmax),optimum temperature (Topt),stomatal conductance (gs),the maximum carboxylation rate of oxygenase (Vcmax),tropical montane rainforest},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.13291},
   file = {/Users/nidhivinod/Zotero/storage/FKNJZCW9/Vårhammar et al. - 2015 - Photosynthetic temperature responses of tree speci.pdf;/Users/nidhivinod/Zotero/storage/JS3DZDMT/nph.html}
+}
+
+@online{VegetationDemographicsEarth,
+  title = {Vegetation Demographics in {{Earth System Models}}: {{A}} Review of Progress and Priorities - {{Fisher}} - 2018 - {{Global Change Biology}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.13910},
+  urldate = {2022-01-22}
 }
 
 @online{VerificationExtremeEvent,
