--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -546,9 +546,12 @@ This simplification is computationally more efficient, although it comes at a co
 The computational middle-ground to representing vertical structure in DVGMs lies in cohort-based models, which represent vegetation as cohorts of individual plants, grouped together based on properties including size, age, and functional type [@fisherVegetationDemographicsEarth2018].
 These sit between the oversimplified vegetation dynamics in big-leaf models, which do not represent any vertical stratification, and individual-based models, whose computational expense prevents them from being integrated into Earth system models. 
 
-The findings of this review reinforce the notion that representing vertical structuring, as can be done more thoroughly using cohort-based-models, is essential to capturing forest dynamics under global change.
+Owing to differences in the representation of canopy layers, DVGMs vary in their ability to incorporate vertical variation in leaf traits and physiological processes. In general, however, this variation is accounted for via light competition. Models partition incoming radiation and radiation within the canopy (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018a]. Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., CLM), while models with multiple canopy layers can analytically solve the 2-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing LAI, or lower light conditions [e.g., @krinnerDynamicGlobalVegetation2005a]. 
+In recent years, there has been a growing effort to incorporate vertical variation more directly in models, specifically as it pertains to leaf water potential and light absorption by leaves, along with a general increasing interest in making direct comparison between models and field measurements [@fisherPerspectivesFutureLand2020]. Several recent model developments are at the cutting edge of representing vertical variation. Model developments by [Bonan et al., 2018; Chen et al., 2016; Longo et al., 2019] implement vertical gradients of irradiance, water content, leaf temperature, and the feedback between the evaporation of water into canopy air space and the humidity of the airspace, modulated by turbulence processes within the canopy and a roughness layer that extends to roughly twice the height of the canopy [@fisherPerspectivesFutureLand2020]. 
+
+The findings of this review reinforce the notion that representing vertical structuring is essential to capturing forest dynamics under global change.
 Improved representation of vertical variation in forest canopy architecture and ecosystem function is critical for representing thermal sensitivity and has repeatedly been identified as an important step toward reduced uncertainty and more accurate characterization of biologically mediated feedbacks [@moorcroftMethodScalingVegetation2001; @banerjeeEffectVerticalCanopy2018; @bonanMovingIncorrectUseful2021]. 
-Moreover, given the anticipated importance of mid-canopy and understory trees in ecosystem resilience to increasing mortality of canopy trees, it is absolutely essential that models separately represent these strata. 
+Moreover, given the anticipated importance of mid-canopy and understory trees in ecosystem resilience to increasing mortality of canopy trees, it is absolutely essential that models separately represent these strata. However, doing so will require improved understanding of the mechanisms controlling vertical gradients.
 
 A key question is whether existing models adequately represent the processes that underpin understory tree responses to thermal stress as well as large tree responses.
 Most models have been developed to capture dynamics in the canopy, or overstory, given the disproportionate role of these large trees in ecosystem dynamics (Fig. `r fig_ecosystem`). 
@@ -556,8 +559,8 @@ Less attention has focused on developing and validating understory tree dynamics
 This is likely due in large part to the fact that observational and experimental studies required to resolve key patterns and underlying mechanisms remain somewhat sparse (see sections 4, 5).
 Pairing of models and observational studies will be important for further improving our mechanistic understanding of vertical gradients and their implications.
 
-Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, @smithSeasonalDroughtrelatedChanges2019] and functions (e.g., thermal responses, as we present in this paper). 
-At the very least, multi-layered ecosystem models will likely be necessary for accurately predicting future forest function [e.g., @depurySimpleScalingPhotosynthesis1997; @bonanMovingIncorrectUseful2021].
+Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers [e.g., sunlit and shaded portions; @depurySimpleScalingPhotosynthesis1997] may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, @smithSeasonalDroughtrelatedChanges2019] and functions (e.g., thermal responses, as we present in this paper). 
+At the very least, multi-layered ecosystem models will likely be necessary for accurately predicting future forest function [e.g., @bonanMovingIncorrectUseful2021].
 In addition, capturing the vertical gradients in ET, GPP, respiration, and woody growth, and subsequently the net ecosystem effects (Figs.`r fig_treerings` - `r fig_ecosystem`), requires improved characterization of the functional response of leaf-level processes (Table `r table_leaf_metabolism`, Fig.`r `fig_leaf_T`) to vertically varying abiotic conditions (Fig.`fig_NEON_vertical`), and the role of traits (Table `r table_leaf_traits`) in mediating responses to thermal sensitivity. 
 
 
