--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -93,6 +93,8 @@ Figure 3: TLeaf and Tleaf.
 l258 under soil wet conditions?
 
 *doing this because I don't think we want to talk about soil conditions. I've always had atmospheric conditions in my mind as I've thought about this.*
+*[suggestion: you could say ‘conditions conducive to stomatal opening’. If by ‘wet’ you meant high humidity, then the sentence is probably incorrect, because high humidity by itself would suppress evaporative cooling.]*
+
 
 L298-299 Far red to red light: I think this could be developed here or somewhere else. You covered the vertical variation in light quantity inside the canopy, but you could also report the vertical change in light quality (light spectrum) as the leaves absorb preferentially some wavelengths but reflects or transmit others.
 
@@ -114,11 +116,6 @@ I thought that the comparison between intra species and interspecies gradients i
 L429 I am not fully sure if I understood this sentence, consider maybe developing the idea. Do you mean that the variation is higher in canopy made of multi species than on the canopy of single species? If so, I didn’t understand the comparison with understory species.
 
 **We removed this sentence because yes, it is confusing, and the points addressed from comments above provide substantial information for inter- and intra-canopy leaf traits.**
-<<<<<<< HEAD
-
-*yes, I think this sentence is confusing now that I am reading it again, need to work on this*
-=======
->>>>>>> 7efe6dec9735684c5bad06d93b5c7f35427f16df
 
 L470 A thought: Stomatal conductance is highly correlated to photosynthetic capacity (Wong et al., 1979) so the gradients in conductance are expected to follow the gradients in photosynthetic capacity. The water use efficiency (gs/A) or the slope parameter of conductance models (Medlyn et al., 2011) could change vertically inside the profiles. I don’t know if there are a lot of studies on the vertical variation of the water use efficiency or the slope parameter, but that could be something interesting to mention. See for example (Buckley, 2021).
 
