responding to comment on line382 by r2

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -182,7 +182,7 @@ Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for exchange of both mass and sensible heat (see sections 2.2, 4.1).
 
 Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.
-Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Vertical CO~2~ concentration gradients can influence the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$), and refixation of respired CO~2~ inferred by $\delta^{13}C$, where both tend to be higher in the lower canopy positions [Table 1]. Particularly, understory seedlings above ground benefit from elevated CO~2~ by having highest rates of CO~2~ refixation [@brooksVerticalGradientsPhotosynthetic1997]. However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
+Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Vertical CO~2~ concentration gradients can influence the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$), and refixation of respired CO~2~ inferred by $\delta^{13}C$, where both tend to be higher in the lower canopy positions [Table 1]. Particularly, understory seedlings above ground benefit from elevated CO~2~, therefore showing highest rates of CO~2~ refixation [@brooksVerticalGradientsPhotosynthetic1997]. However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
  
 Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, e.g., @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020]. 
