--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -123,14 +123,7 @@ L470 A thought: Stomatal conductance is highly correlated to photosynthetic capa
 
 I also think you could describe a little bit more the hydraulic constraints that increase with height. See for example (Koch et al., 2004). I think there are also other papers discussing the effect of height on water potential and stomatal conductance. You mention some aspects of it later, around L 636.
 
-<<<<<<< HEAD
-*need to add more water water use efficiency*
-
-**We added the following sentences related to hydraulic contraints with height:** 
-**Further, tree height also plays a role in determining the gradient of $g_s$ vertically, which has implications for $T_leaf$. With an increase in tree height, water travels a longer distance to meet the evaporative demands in sunlit canopy leaves. Longer water path length, high irradiance and VPD imposes hydraulic constraints in sunlit canopy leaves (Schäfer et al., 2000; Ambrose et al., 2010). Therefore, although typically $g_s$ increases with light, upper canopy leaves of taller trees have lower $g_s$ and leaf water potential to enable high leaf water-use efficiency (Rijkers et al., 2000; Kenzo et al., 2015). This, added to the tendency for sun leaves to have higher $T_leaf$, implies that high $T_air$ should decrease $g_s$ of canopy leaves more than understory leaves, particularly when water availability is limited.**
-=======
 **We have added mention of a few papers documenting the hydraulic constraints with height as they affect stomatal conductance [@yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010].**
->>>>>>> 7efe6dec9735684c5bad06d93b5c7f35427f16df
 
 L471, I think the word conductance is missing.
 
@@ -154,7 +147,7 @@ Most DGCMs represent a vertical variability in the main physiological parameters
 
 **Thank you for noting the need to clarify this point. We have added a passage at the end of the sentence that mentions big-leaf models to clarify that they do indeed account for assumed vertical profiles: “...to big-leaf models that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer, ***implicitly capturing vertical profiles in light, photosynthetic capacity and other features by assuming those profiles are exponential and thus can be integrated analytically…”***(added text underlined here). We also deleted the clause that occurred two sentences later, that had said about big-leaf models: “...which do not represent any vertical stratification…”**
 
-**We also added a paragraph that more clearly describes the methods used for light competition that enables the type of variation in physiological traits that you described (e.g., Vcmax). See lines X-X** 
+**In addition, we also added a paragraph that more clearly describes the methods used for light competition that enables the type of variation in physiological traits that you described (e.g., Vcmax). See lines X-X** 
 *Need to add these lines: "Owing to difference...".*
 
 To me, an important remark is that most gradients in DGVMs are prescribed. More data would of course help to better understand and quantify the gradients, and to compare them with model representations (part ‘Scaling in situ data with remote sensing’ of your paper). But in the end, the mechanisms explaining those gradients are still not really known, in the sense that they can’t be efficiently modeled prognostically. This is due to the multiple sources of parameters variation that you highlighted (light environment, temperature, hydraulic, …). A lot of research is done using optimality frameworks to try and predict the photosynthetic and other vegetation traits based on environmental variables. See for example (Ali et al., 2016; Buckley, 2021). A question I have, is if including more precise cohorts as you suggest, would improve the accuracy of models given all the uncertainty in the parametrization of their traits.
@@ -273,10 +266,12 @@ There are a few dense sentences or run-ons that could be revised. Lines 192-196 
 
 line52: 'with decreases being more commonly documented across the world’s forests'
 
+*I don't understand what needs to be done with the sentence*
+
 line128: '… but understory leaf area density is often relatively high in the understory as well' sounds redundant. Please reword.
 
 **We removed the second 'understory' word here:** 
-**Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest leaf area density in the upper canopy layers, but understory leaf area density is often relatively high ~~in the understory~~ as well**
+**"Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest leaf area density in the upper canopy layers, but understory leaf area density is often relatively high ~~in the understory~~ as well"**
 
 line140 'Light … decreases from the canopy top to the forest floor' – why isn’t foliage clumping mentioned here amongst the other factors?
 
@@ -296,7 +291,7 @@ Fig. 2 is a mix of computed and measured quantities. LAD and proportion of sun l
 line165-172: refixation of respired CO2 in the understory isn’t mentioned here, but there have been a number of studies, particularly involving 13C, that have looked at this. Please mention along with at least 1 reference.
 
 **Thank you for this suggestion, we added the following information:**
-*"Vertical CO~2~ concentration gradients can influence the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$), and refixation of respired CO~2~ inferred by $\delta^{13}C$, where both tend to be higher in the lower canopy positions. Particularly, understory seedlings above ground can have highest rates of CO~2~ refixation [Brooks et al. 1997]."*
+**"Vertical CO~2~ concentration gradients can influence the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$), and refixation of respired CO~2~ inferred by $\delta^{13}C$, where both tend to be higher in the lower canopy positions. Particularly, understory seedlings above ground benefit from elevated CO~2~, therefore showing highest rates of CO~2~ refixation [Brooks et al. 1997]."**
 
 line185: Buffering again. I supposed what is 'buffering' for the authors would conventionally be thought of differently by meteorologists. Please consult with one of them, and consider using different wording.
 
@@ -340,6 +335,8 @@ Table 1: What is here is not leaf gas exchange, and it seems that the authors ha
 Lines 354-372 on sun versus shade leaves and Table 1. Most of what is here was known a long time ago, say in Vogel 1968 (cited) and Boardman 1977 (not cited) but pertains to within-canopy rather than between sun and shade plants. I would suggest that this would be improved if the authors started from these old studies that most readers will recognise, and state how we’ve advanced in understanding and progressed toward within-canopy work rather than between sun-and-shade habitats.
 
 line382: 'more frequent stomatal closure higher' is awkward and does not follow the comparative. Higher than what?
+
+**We agree that the comparison is not very clear here. We added "compared to shaded lower canopies" to the sentence: "Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (see section 4, Table `r table_leaf_metabolism`) ***compared to shaded lower canopies,***result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C isotopic ratios in leaf tissues (Table `r table_leaf_traits`)**
 
 line383: d13C is NOT a concentration, it is an isotope ratio. Please revise.
 
