responding to R2 line148, and editing the sentences

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -168,10 +168,9 @@ In addition, seasonally dry and wet conditions, deciduousness, and phenology con
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
 
 Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor.
-The profile shape of light is modified by leaf area density, leaf clumping, canopy height, and canopy structure across species and forest types [Fig. `r fig_NEON_vertical`a-d, Supporting Information Figure `r SIfig_NEON_all`, @koike_leaf_2001]. Canopy foliage absorb a large portion of PAR (400-700nm), and selectively filter incident light along the gradient, therefore altering the spectral characteristics of light received in the lower canopy layers. Along with decreasing PAR, there is a decrease in the red (~685-690 nm) to far red (~730-740 nm) ratio of light as it reaches the forest floor, where understories are enriched in near infrared radiation and absorb light in wavelengths of 700-1000 nm [@decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
-This gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @smithSeasonalDroughtrelatedChanges2019; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
-Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. 
-Likewise, the mid-canopy experiences a highly variable light environment due to the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
+The profile shape of light is modified by leaf area density, leaf clumping, canopy height, and canopy structure across species and forest types [Fig. `r fig_NEON_vertical`a-d, Supporting Information Figure `r SIfig_NEON_all`, @koike_leaf_2001]. Canopy foliage absorb a large portion of the direct light in PAR (400-700nm), and selectively filter incident light along the gradient, therefore altering the spectral characteristics of light received in the lower canopy layers. Along with decreasing PAR, there is a decrease in the red (~685-690 nm) to far red (~730-740 nm) ratio of light as it reaches the forest floor, where understories receive diffused light enriched in near infrared radiation and absorb light in wavelengths of 700-1000 nm [@decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
+Mid-canopies and understories experience a dynamic light environment due to sunflecks, or brief increases in direct solar radiation or PAR, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
+This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @smithSeasonalDroughtrelatedChanges2019; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 The implications of this light gradient are that leaf traits vary along the vertical gradient [Table 1], and that upper canopy leaves have higher potential photosynthetic rate (see section 4.2), but also greater propensity towards elevated $T_{leaf}$ (see sections 2.2, 4.2).
 
 Steep vertical profiles of wind speed, water vapor, CO~2~ and temperature also occur within canopies, but are more difficult to predict and to generalize on the basis of theoretical first principles than are radiation profiles. Vertical transport at the macroscopic scale of a plant canopy is dominated by turbulent transport rather than by molecular diffusion. Above the canopy, turbulent transport typically mimics diffusion – that is, vertical fluxes of heat, mass and momentum are proportional to their respective vertical gradients, and to transfer coefficients (eddy diffusivities, often symbolized K) that depend on both friction and buoyancy [@penmanWeatherWheatEssay1960]. In this “K-theory” regime, wind speed declines logarithmically with proximity to the ground or canopy surface [@monteithPrinciplesEnvironmentalPhysics2013]. Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [e.g., @raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988]. However, K-theory often fails within canopies, making canopy wind profiles difficult to generalize from first principles [e.g., @denmeadScalarTransportPlant1987; @RaupachM.R1989Ttip; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007]. For example, in the lower canopy, wind speed may decrease with height despite net downward momentum flux [@shawSecondaryWindSpeed1977], and temperature may increase with height despite upward sensible heat flux [e.g., @raupachLagrangianAnalysisScalar1987]. Such counter-gradient transport may arise from the intermittent generation, at the canopy surface, of large wakes or coherent eddy structures that periodically dip down through the canopy, gathering packets of warmed, humidified and CO~2~-enriched or –depleted air from beneath and within the canopy and flushing them to the atmosphere above [@finniganTurbulenceWavingWheat1979; @baldocchiTraceGasExchange1991]. These "sweep-eject" events can couple understory conditions more directly to conditions above the canopy than beneath. 
@@ -289,7 +288,7 @@ In open canopies, where light is comparatively homogeneous, leaf traits may be m
 Most leaf biochemical traits also vary across light and height gradients (Table `r table_leaf_traits`), both shaping and resulting from gradients in metabolism (see section 4, Table `r table_leaf_metabolism`).
 Sun leaves have higher concentrations (per unit area) of elements such as nitrogen ($N_{area}$) and phosphorus ($P_{area}$) that are critical to leaf metabolism, including respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthetic processes [@scartazzaInvestigatingEuropeanBeech2016a; @niinemetsPhotosyntheticAcclimationSimultaneous2004; @weerasingheCanopyPositionAffects2014].
 Increases in chlorophyll a/b ratios with height reflect the greater light availability in the upper canopy, while greater chlorophyll concentrations at lower heights within the canopy give shade leaves greater PAR absorptance efficiency (Table `r table_leaf_traits`).
-Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (see section 4, Table `r table_leaf_metabolism`) result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C isotopic ratios in leaf tissues (Table `r table_leaf_traits`).
+Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (see section 4, Table `r table_leaf_metabolism`) compared to shaded lower canopies, result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C isotopic ratios in leaf tissues (Table `r table_leaf_traits`).
 
 Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
 Carotenoids (e.g., beta carotene and lutein), including xanthophyll cycle pigments (i.e., violaxanthin, antheraxanthin and zeaxanthin, VAZ), can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. 
@@ -354,7 +353,7 @@ Due to higher wind, lower RH, and smaller leaf sizes in the canopy (Fig. `r fig_
 Maximum $g_s$ increases with light, and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
 However, when water supply cannot meet the demands incurred by the high irradiance, VPD and $g_b$ experienced by sun leaves typically at noon, midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and carbon isotope discrimination discussed in section 3.1 (Table 1).
 In sun leaves, $T_{leaf}$ thus further increases due to the lack of transpirational cooling [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
-The temperature at which $g_s$ is maximal, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021a]. 
+The temperature at which $g_s$ is maximal, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ than do shade leaves in the lower canopy [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. 
 
 Further, tree height also plays a role in determining the gradient of $g_s$ vertically, which has implications for $T_{leaf}$. With an increase in tree height, water travels a longer distance to meet the evaporative demands in sunlit canopy leaves. Longer water path length, higher irradiance and VPD imposes hydraulic constraints in sunlit canopy leaves [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Therefore, although typically $g_s$ increases with light, due to hydraulic constraints, upper canopy leaves of taller trees have lower $g_s$ and leaf water potential to enable high leaf water-use efficiency [@kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a]. This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of canopy leaves more than understory leaves, particularly when water availability is limited.
 =======
