--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -279,6 +279,10 @@ line140 'Light … decreases from the canopy top to the forest floor' – why is
 **"Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor. The profile shape of this light is modified by leaf area density, leaf clumping, canopy height, and canopy structure across species and forest types (Fig. 2a-d, Supporting Information Figure S1, Koike et al., 2001)."** 
 
 line148: 'Variability in the light environment decreases with height' – I don’t see this except perhaps at z = 0 and even so seems tenuous. Explain.
+**We revised the sentence to make it clearer:**
+- **Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. Likewise, the mid-canopy experiences a highly variable light environment due to the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].**
+
+- **Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation or PAR, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].**
 
 Fig. 1: In the diagram, stomatal density, leaf angle are separate categories yet VAZ and VOC are not. As far as I know though, there is no biochemical link between VAZ and VOC, so these should be separate shouldn't they?
 
@@ -336,7 +340,7 @@ Lines 354-372 on sun versus shade leaves and Table 1. Most of what is here was k
 
 line382: 'more frequent stomatal closure higher' is awkward and does not follow the comparative. Higher than what?
 
-**We agree that the comparison is not very clear here. We added "compared to shaded lower canopies" to the sentence: "Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (see section 4, Table `r table_leaf_metabolism`) ***compared to shaded lower canopies,***result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C isotopic ratios in leaf tissues (Table `r table_leaf_traits`)**
+**We agree that the comparison is not very clear here. We added "compared to shaded lower canopies" to the sentence: "Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies ***compared to shaded lower canopies,***result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C isotopic ratios in leaf tissues**
 
 line383: d13C is NOT a concentration, it is an isotope ratio. Please revise.
 
