--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -9972,6 +9972,22 @@
   keywords = {Belowground Resource,Lamina Thickness,Sandy Loam,Tropical Forest,Tropical Tree Species}
 }
 
+@article{sackDevelopmentalBasisStomatal2016,
+  title = {The {{Developmental Basis}} of {{Stomatal Density}} and {{Flux}}},
+  author = {Sack, Lawren and Buckley, Thomas N.},
+  date = {2016-08-01},
+  journaltitle = {Plant Physiology},
+  volume = {171},
+  number = {4},
+  pages = {2358--2363},
+  issn = {0032-0889},
+  doi = {10.1104/pp.16.00476},
+  url = {https://doi.org/10.1104/pp.16.00476},
+  urldate = {2022-01-22},
+  abstract = {Since the first published measurements of stomatal density by Johann Hedwig (1793) and Alexander von Humboldt (1798), the counting and measuring of stomata has been one of the most typical botanical activities, with an important role across fields of plant biology (Willmer and Fricker, 1996). Stomatal density (d) and size (s) are indicators of acclimation and adaptation to contrasting environments, and permit estimation of the theoretical anatomical maximum stomatal conductance (g ~max; units: mol m−2 s−1; Brown and Escombe, 1900; Lawson et al., 1998; Franks and Beerling, 2009; Franks et al., 2009), which represents a first quantitative estimate of the anatomical constraint on maximum stomatal gas exchange. While decades of theory have focused on d and g ~max, their basis in traits with a transparent relationship to epidermal development has not been expressed. We derived exact mathematical equations for d and g ~max as functions of stomatal differentiation rate, also known as stomatal index (i, no. of stomata per no. of epidermal cells plus stomata), s, and epidermal cell size (e). These equations unify the quantitative understanding of epidermal development and maximum flux, revealing the developmental bases for d and g ~max across genotypes or species, and enabling targeting of specific epidermal development traits in plant breeding for productivity.},
+  file = {/Users/nidhivinod/Zotero/storage/ZRZW4N5D/Sack and Buckley - 2016 - The Developmental Basis of Stomatal Density and Fl.pdf}
+}
+
 @article{sackHowStrongIntracanopy2006,
   title = {How Strong Is Intracanopy Leaf Plasticity in Temperate Deciduous Trees?},
   author = {Sack, Lawren and Melcher, Peter J. and Liu, Wendy H. and Middleton, Erin and Pardee, Tyler},
