--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -279,10 +279,12 @@ line140 'Light … decreases from the canopy top to the forest floor' – why is
 **"Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor. The profile shape of this light is modified by leaf area density, leaf clumping, canopy height, and canopy structure across species and forest types (Fig. 2a-d, Supporting Information Figure S1, Koike et al., 2001)."** 
 
 line148: 'Variability in the light environment decreases with height' – I don’t see this except perhaps at z = 0 and even so seems tenuous. Explain.
-**We revised the sentence to make it clearer:**
-- **Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. Likewise, the mid-canopy experiences a highly variable light environment due to the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].**
 
-- **Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation or PAR, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].**
+**We revised the sentence to make it clearer:**
+
+- **Previous sentences: Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. Likewise, the mid-canopy experiences a highly variable light environment due to the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].**
+
+- **Changed sentences: Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation or PAR, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].**
 
 Fig. 1: In the diagram, stomatal density, leaf angle are separate categories yet VAZ and VOC are not. As far as I know though, there is no biochemical link between VAZ and VOC, so these should be separate shouldn't they?
 
