added BoN for Ci into traits table

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1413,6 +1413,24 @@
   file = {/Users/nidhivinod/Zotero/storage/3PHTAW33/Buckley and Schymanski - 2014 - Stomatal optimisation in relation to atmospheric C.pdf;/Users/nidhivinod/Zotero/storage/3YVR55PV/nph.html}
 }
 
+@article{buckleyStomatalOptimisationRelation2014a,
+  title = {Stomatal Optimisation in Relation to Atmospheric {{CO2}}},
+  author = {Buckley, Thomas N. and Schymanski, Stanislaus J.},
+  date = {2014},
+  journaltitle = {New Phytologist},
+  volume = {201},
+  number = {2},
+  pages = {372--377},
+  issn = {1469-8137},
+  doi = {10.1111/nph.12552},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/nph.12552},
+  urldate = {2022-01-22},
+  langid = {english},
+  keywords = {optimality theory,optimization,stomata,transpiration,water use efficiency},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.12552},
+  file = {/Users/nidhivinod/Zotero/storage/EAR5ZSVX/Buckley and Schymanski - 2014 - Stomatal optimisation in relation to atmospheric C.pdf}
+}
+
 @book{campbell_introduction_1998,
   title = {An {{Introduction}} to {{Environmental Biophysics}}},
   author = {Campbell, G. and Norman, J.},
